scss/component/_media-queries.scss
// Media queries


/* ============================================= */
/*              Media Queries                    */
/* ============================================= */
@media (min-width: $break-m) {

.container {
  max-width: 1400px;
  display: block;
  margin-left: auto;
  margin-right: auto;
}

.centered {
  display: block;
  margin-left: auto;
  margin-right: auto;
}

.row {
  flex-direction: row;
}

[class^=col] {
  display: flex;
  justify-content: center;
  margin-top: 0;
  align-items: center;
}

[class^=col] + [class^=col] {
  margin-left: 10px;
}

.col-1 {
  flex-basis: 8.33%;
}

.col-2 {
  flex-basis: 16.67%;
}

.col-3 {
  flex-basis: 25.00%;
}

.col-4 {
  flex-basis: 33.33%;
}

.col-5 {
  flex-basis: 41.67%;
}

.col-6 {
  flex-basis: 50.00%;
}

.col-7 {
  flex-basis: 58.33%;
}

.col-8 {
  flex-basis: 66.67%;
}

.col-9 {
  flex-basis: 75.00%
}

.col-10 {
  flex-basis: 83.33%;
}

.col-11 {
  flex-basis: 91.67%;
}

.col-12 {
  flex-basis: 100%;
}

.nav {
  flex-direction: row;
  justify-content: flex-end;
  align-items: center;
}

.nav-link {
  flex-basis: 100px;
}

.btn {
  padding: 10px 30px;
}

.btn + .btn {
  margin-left: 10px;
}

.logo {
  margin-left: initial;
  margin-right: initial;
}

}

